Работают все операции в синхронных аналогах сервисов / репозиториев / контроллеров; Сервлеты работают с синхронными контроллерами