@@ -1,18 +1,21 @@
 package services.synchronous;
 
+import configurations.JdbcConnection;
 import models.dtos.ProjectUsersDto;
 import models.dtos.UserDto;
 import models.entities.Project;
 import models.entities.User;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import repositories.ProjectUsersRepositoryImpl;
-import repositories.UsersRepositoryImplementation;
-import repositories.interfaces.UserRepository;
+import repositories.interfaces.synchronous.ProjectUserRepositorySynchro;
+import repositories.synchronous.ProjectUsersRepositorySynchronous;
+import repositories.synchronous.UsersRepositorySynchronous;
 import services.interfaces.synchronous.ProjectServiceSynchro;
 import utils.StaticConstants;
+import utils.exceptions.ProjectNotFoundException;
 import utils.mappers.UserMapper;
 
+import java.sql.SQLException;
 import java.util.*;
 import java.util.concurrent.CompletionException;
 import java.util.concurrent.ExecutionException;
@@ -26,52 +29,54 @@ public class ProjectsService implements ProjectServiceSynchro {
 
     Logger logger = LoggerFactory.getLogger(ProjectsService.class);
     private final repositories.interfaces.synchronous.ProjectRepoSynchro projectRepository;
-    private final UserRepository userRepository;
-    private final ProjectUsersRepositoryImpl projectUsersRepository;
+    private final UsersRepositorySynchronous userRepository;
+    private final ProjectUserRepositorySynchro projectUsersRepository;
 
     public ProjectsService() {
         this.projectRepository = new repositories.synchronous.ProjectsRepository();
-        this.userRepository = new UsersRepositoryImplementation();
-        this.projectUsersRepository = new ProjectUsersRepositoryImpl();
+        this.userRepository = new UsersRepositorySynchronous();
+        this.projectUsersRepository = new ProjectUsersRepositorySynchronous();
     }
 
+    public ProjectsService(
+            repositories.interfaces.synchronous.ProjectRepoSynchro projectRepository, ProjectUserRepositorySynchro projectUsersRepository) {
+        this.projectRepository = projectRepository;
+        this.userRepository = new UsersRepositorySynchronous();
+        this.projectUsersRepository = projectUsersRepository;
+    }
 
     @Override
     public List<Project> getByUserId(UUID userId) {
+        Objects.requireNonNull(userId, StaticConstants.PARAMETER_IS_NULL_EXCEPTION_MESSAGE);
 
-        Optional<List<Project>> projectsOpt = projectRepository.findByUserId(userId);
-        if (projectsOpt.isEmpty() || projectsOpt.get().isEmpty()) {
-            return Collections.emptyList();
+        var projectUsersOptional = projectUsersRepository.findByUserId(userId);
+        if(projectUsersOptional.isPresent()) {
+            var projectUsers = projectUsersOptional.get();
+            var projectIds = projectUsers.stream().map(ProjectUsersDto::getProjectId).toList();
+            var projectsOptional = projectRepository.findByProjectIds(projectIds);
+
+            if(projectsOptional.isPresent()) {
+                return projectsOptional.get().stream()
+                        .map(this::compileProjectWithUsers)
+                        .collect(Collectors.toList());
+            }
+            throw new ProjectNotFoundException(StaticConstants.PROJECT_NOT_FOUND_EXCEPTION_MESSAGE);
         }
-
-        List<Project> projects = projectsOpt.get();
-        return enrichProjectsWithUsers(projects);
+        throw new ProjectNotFoundException(StaticConstants.PROJECT_NOT_FOUND_EXCEPTION_MESSAGE);
     }
 
     @Override
     public List<Project> getByAdminId(UUID adminId) {
+        Objects.requireNonNull(adminId, StaticConstants.PARAMETER_IS_NULL_EXCEPTION_MESSAGE);
 
         Optional<List<Project>> projectsOpt = projectRepository.findByAdminId(adminId);
         if (projectsOpt.isEmpty() || projectsOpt.get().isEmpty()) {
             logger.error("ProjectService: Projects not found for admin with id: {}", adminId);
-            return Collections.emptyList();
+            throw new ProjectNotFoundException(StaticConstants.NO_PROJECTS_FOUND_BY_ADMIN_ID_EXCEPTION_MESSAGE);
         }
 
-        logger.info("ProjectService: Projects found for admin with id: {}", adminId);
         List<Project> projects = projectsOpt.get();
-        var result = enrichProjectsWithUsers(projects);
-        logger.info("ProjectService: Projects found: {}", result);
-        return result;
-    }
-
-    @Override
-    public Project addUserToProject(UUID userId, UUID projectId) {
-        return null;
-    }
-
-    @Override
-    public Project removeUserFromProject(UUID userId, UUID projectId) {
-        return null;
+        return compileMultipleProjectsWithUsers(projects);
     }
 
     @Override
@@ -84,106 +89,141 @@ public class ProjectsService implements ProjectServiceSynchro {
     @Override
     public Project getById(UUID id) {
         Optional<Project> projectOpt = projectRepository.findById(id);
-        if (projectOpt.isEmpty()) {
-            throw new RuntimeException("Project not found with id: " + id);
+        if(projectOpt.isPresent()) {
+            return compileProjectWithUsers(projectOpt.get());
         }
-
-        Project project = projectOpt.get();
-        return enrichProjectWithUsers(project);
+        else throw new ProjectNotFoundException(StaticConstants.PROJECT_NOT_FOUND_EXCEPTION_MESSAGE);
     }
 
     @Override
     public boolean deleteById(UUID id) {
-        return false;
+        Objects.requireNonNull(id, StaticConstants.PARAMETER_IS_NULL_EXCEPTION_MESSAGE);
+        return projectRepository.delete(id);
     }
 
     @Override
     public Project updateById(Project entity) {
-        return null;
+        Objects.requireNonNull(entity, StaticConstants.PARAMETER_IS_NULL_EXCEPTION_MESSAGE);
+        return projectRepository.update(entity);
     }
 
-    private List<Project> enrichProjectsWithUsers(List<Project> projects) {
-         List<UUID> projectIds = projects.stream()
-                .map(Project::getId)
-                .collect(Collectors.toList());
+    @Override
+    public Project addUserToProject(UUID userId, UUID projectId) {
+        Objects.requireNonNull(userId, StaticConstants.PARAMETER_IS_NULL_EXCEPTION_MESSAGE);
+        Objects.requireNonNull(projectId, StaticConstants.PARAMETER_IS_NULL_EXCEPTION_MESSAGE);
 
-        try {
-            List<ProjectUsersDto> projectUsers = projectUsersRepository.findByProjectIds(projectIds).get();
-            Map<UUID, List<ProjectUsersDto>> usersByProjectId = projectUsers.stream()
-                    .collect(Collectors.groupingBy(ProjectUsersDto::getProjectId));
+        var projectOptional = projectRepository.findById(projectId);
 
-            Set<UUID> userIds = projectUsers.stream()
-                    .map(ProjectUsersDto::getUserId)
-                    .collect(Collectors.toSet());
+        if(projectOptional.isPresent()) {
+            var project = projectOptional.get();
 
-            Map<UUID, User> usersMap = handleUserIdAndUsersMap(projectUsers);
+            var projectWithUsers =  compileProjectWithUsers(project);
 
-            return handleProjectsWithUserMap(projects, usersByProjectId, usersMap);
+            try (JdbcConnection connection = new JdbcConnection()) {
+
+                var result = projectUsersRepository.addUserToProject(userId, projectId);
+
+                if(result) {
+                    var projectUsers = projectWithUsers.getProjectUsers();
+                    var newUser = new UserDto();
+                    newUser.setId(userId);
+                    if(projectUsers == null) {
+                        projectUsers = new ArrayList<>();
+                    }
+                    projectUsers.add(newUser);
+                    project.setProjectUsers(projectUsers);
+
+                    return project;
+                }
+               else throw new RuntimeException("Error adding user to project");
+
+            } catch (SQLException e) {
+                throw new RuntimeException(e);
+            } catch (Exception e) {
+                throw new RuntimeException(e);
+            }
         }
-        catch (CompletionException | InterruptedException | ExecutionException e) {
-            logger.error("ProjectService: enrichProjectsWithUsers: Error enriching projects with users", e);
-            throw new RuntimeException(e);
-        }
+        throw new ProjectNotFoundException(StaticConstants.PROJECT_NOT_FOUND_EXCEPTION_MESSAGE);
     }
-    private Map<UUID, User> handleUserIdAndUsersMap(List<ProjectUsersDto> projectUsers) throws ExecutionException, InterruptedException {
-        Set<UUID> userIds = projectUsers.stream()
-                .map(ProjectUsersDto::getUserId)
-                .collect(Collectors.toSet());
 
-        return userRepository.findAllByIdsAsync(new ArrayList<>(userIds))
+    @Override
+    public Project removeUserFromProject(UUID userId, UUID projectId) {
+        Objects.requireNonNull(userId, StaticConstants.PARAMETER_IS_NULL_EXCEPTION_MESSAGE);
+        Objects.requireNonNull(projectId, StaticConstants.PARAMETER_IS_NULL_EXCEPTION_MESSAGE);
+
+        var projectOptional = projectRepository.findById(projectId);
+
+        if(projectOptional.isPresent()) {
+            var project = projectOptional.get();
+
+            var projectWithUsers =  compileProjectWithUsers(project);
+
+            try (JdbcConnection connection = new JdbcConnection()) {
+
+                var result = projectUsersRepository.deleteUserFromProject(userId, projectId);
+
+                if(result) {
+                    var projectUsers = projectWithUsers.getProjectUsers();
+                    var newUser = new UserDto();
+                    newUser.setId(userId);
+                    if(projectUsers == null) {
+                        projectUsers = new ArrayList<>();
+                    }
+                    var existingProjectUser = projectUsers.stream().filter(user -> user.getId().equals(userId)).findFirst().orElse(null);
+
+                    if(existingProjectUser != null) {
+                        projectUsers.remove(existingProjectUser);
+                    }
+                    project.setProjectUsers(projectUsers);
+
+                    return project;
+                }
+                else throw new RuntimeException("Error adding user to project");
+
+            } catch (SQLException e) {
+                throw new RuntimeException(e);
+            } catch (Exception e) {
+                throw new RuntimeException(e);
+            }
+        }
+        throw new ProjectNotFoundException(StaticConstants.PROJECT_NOT_FOUND_EXCEPTION_MESSAGE);
+    }
+
+
+    private List<ProjectUsersDto> getProjectUsersByProjectId(UUID projectId) {
+        var projectUsersOptional = projectUsersRepository.findByProjectId(projectId);
+        if (projectUsersOptional.isEmpty()) {
+            return Collections.emptyList();
+        }
+        return projectUsersOptional.get();
+   }
+
+    private List<UserDto> getUsersByIds(List<UUID> userIds) {
+        Objects.requireNonNull(userIds, StaticConstants.PARAMETER_IS_NULL_EXCEPTION_MESSAGE);
+
+        return userRepository.findAllByIds(userIds)
                 .get()
                 .stream()
-                .collect(Collectors.toMap(User::getId, user -> user));
+                .map(UserMapper::toDto)
+                .collect(Collectors.toList());
     }
 
-    private List<Project> handleProjectsWithUserMap(
-            List<Project> projects, Map<UUID,
-            List<ProjectUsersDto>> usersByProjectId,
-            Map<UUID, User> usersMap) {
+    private Project compileProjectWithUsers(Project project) {
 
-                projects.stream()
-                .map(project -> {
-                    List<ProjectUsersDto> projectUserDtos = usersByProjectId.getOrDefault(project.getId(), Collections.emptyList());
-                    List<UserDto> userDtos = projectUserDtos.stream()
-                            .map(dto -> {
-                                User user = usersMap.get(dto.getUserId());
-                                return user != null ? UserMapper.toDto(user) : null;
-                            })
-                            .filter(Objects::nonNull)
-                            .collect(Collectors.toList());
-                    project.setProjectUsers(userDtos);
-                    return project;
-                })
-                .toList();
-
-        return projects;
+        var projectUsers = getProjectUsersByProjectId(project.getId());
+        if(projectUsers.size() > 0) {
+            var users = getUsersByIds(projectUsers
+                    .stream()
+                    .map(ProjectUsersDto::getUserId)
+                    .toList());
+            return new Project(project, users);
+        }
+        return project;
     }
 
-    private Project enrichProjectWithUsers(Project project) {
-        try {
-            List<ProjectUsersDto> projectUsers = projectUsersRepository.findByProjectId(project.getId()).get();
-
-            if (!projectUsers.isEmpty()) {
-
-                List<UUID> userIds = projectUsers.stream()
-                        .map(ProjectUsersDto::getUserId)
-                        .collect(Collectors.toList());
-
-                List<User> users = userRepository.findAllByIdsAsync(userIds).get();
-
-                List<UserDto> userDtos = users.stream()
-                        .map(UserMapper::toDto)
-                        .collect(Collectors.toList());
-                project.setProjectUsers(userDtos);
-            } else {
-                logger.info("ProjectService: enrichProjectWithUsers: No users found for project");
-                project.setProjectUsers(Collections.emptyList());
-            }
-            return project;
-        }
-        catch (CompletionException | InterruptedException | ExecutionException e) {
-            logger.error("ProjectService: enrichProjectWithUsers: Error enriching project with users", e);
-            throw new RuntimeException(e);
-        }
+    private List<Project> compileMultipleProjectsWithUsers(List<Project> projects) {
+        return projects.stream()
+                .map(this::compileProjectWithUsers)
+                .collect(Collectors.toList());
     }
 }
